# psrecord

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
docs/readme-assets/: terminal-output.txt
src/: ascii.rs  graph.rs  main.rs  memory_scale.rs  monitor.rs  time_axis.rs
tests/: cli.rs  integration.rs
tests/common/: mod.rs
tests/suites/: cli.rs
