[package]
name = "psrecord"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.38"
plotters = "0.3"
rasciigraph = "0.3"
anyhow = "1.0"
terminal_size = "0.4"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -2 }
